--- a/Do While Loop/Do While Loop.csproj
+++ b/Do While Loop/Do While Loop.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>Switch_Statement</RootNamespace>
+    <RootNamespace>Do_While_Loop</RootNamespace>
   </PropertyGroup>
 
 </Project>
